miniextendr-macros/tests/ui/fn_dots_wrong_macro.stderr
error: dots expects `typed_list!(...)` macro
 --> tests/ui/fn_dots_wrong_macro.rs:5:22
  |
5 | #[miniextendr(dots = vec!(i32))]
  |                      ^^^
